--- a/frontgoose/scss/main.scss
+++ b/frontgoose/scss/main.scss
@@ -59,7 +59,7 @@ body {
       display: block !important;
     }
 }
-.offcanvas-overlap .left-off-canvas-menu {
+.offcanvas-overlap .left-off-canvas-menu, .left-off-canvas-menu {
     z-index: 2000001;
 }
 img {
